# cosmostool

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLAUDE_TASKS.md  CMakeLists.txt  CMakePresets.json  libssh2.pc.in  setup.ps1  test_detail.json
.github/workflows/: build-executable.yml  tests.yml
cmake/: CompilerWarnings.cmake  Dependencies.cmake  StaticAnalysis.cmake
docs/: architecture.md  developer-guide.md
packaging/: installer.nsi  package.ps1
resources/: resources.qrc
resources/help/: userguide.html
resources/themes/: dark.qss
src/: CMakeLists.txt
src/app/: Application.cpp  Application.h  CMakeLists.txt  ServiceRegistry.cpp  ServiceRegistry.h  StartupPolicy.h  main.cpp
src/core/: CMakeLists.txt
src/core/connection/: ConnectionConfig.h  ExecutorProxy.cpp  ExecutorProxy.h  ExecutorResult.h  ICommandExecutor.h  NullCommandExecutor.h  ShellQuote.cpp  ShellQuote.h
src/core/connection/ssh/: SshExecutor.cpp  SshExecutor.h
src/core/connection/wsl/: WslExecutor.cpp  WslExecutor.h
src/core/events/: EventBus.cpp  EventBus.h
src/core/logging/: Logger.cpp  Logger.h
src/models/: CMakeLists.txt  ConnectionProfile.h  DockerContainer.h  HealthCheckResult.h  Plugin.h  SystemMetrics.h
src/services/: CMakeLists.txt
src/services/connection/: ConnectionService.cpp  ConnectionService.h  IConnectionService.h
src/services/docker/: DockerService.cpp  DockerService.h  IDockerService.h
src/services/doctor/: DoctorService.cpp  DoctorService.h  IDoctorService.h
src/services/filesystem/: IRemoteFileService.h  RemoteFileService.cpp  RemoteFileService.h
src/services/plugin/: IPluginService.h  PluginService.cpp  PluginService.h
src/services/settings/: ISettingsService.h  SettingsService.cpp  SettingsService.h
src/services/system/: ISystemService.h  SystemService.cpp  SystemService.h
src/ui/: AppMode.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/ui/dialogs/: AboutDialog.cpp  AboutDialog.h  AddTargetDialog.cpp  AddTargetDialog.h  CmdTlmFieldDialog.cpp  CmdTlmFieldDialog.h  ConnectionDialog.cpp  ConnectionDialog.h  NewMicroserviceDialog.cpp  NewMicroserviceDialog.h  NewScriptDialog.cpp  NewScriptDialog.h  PluginManifestInterfaceDialog.cpp  PluginManifestInterfaceDialog.h  PluginManifestModifierDialog.cpp  PluginManifestModifierDialog.h  PluginScaffoldDialog.cpp  PluginScaffoldDialog.h  PluginWizard.cpp  PluginWizard.h  ScreenWidgetDialog.cpp  ScreenWidgetDialog.h  UserGuideDialog.cpp  UserGuideDialog.h
src/ui/styles/: ThemeManager.cpp  ThemeManager.h
src/ui/views/: CmdTlmView.cpp  CmdTlmView.h  DashboardView.cpp  DashboardView.h  DockerView.cpp  DockerView.h  DoctorView.cpp  DoctorView.h  InfraView.cpp  InfraView.h  LogViewerView.cpp  LogViewerView.h  PacketToolsView.cpp  PacketToolsView.h  PluginView.cpp  PluginView.h  SettingsView.cpp  SettingsView.h  ValidatorView.cpp  ValidatorView.h
src/ui/widgets/: CmdTlmHighlighter.cpp  CmdTlmHighlighter.h  CmdTlmSnippets.h  LogWidget.cpp  LogWidget.h  MetricCard.cpp  MetricCard.h  PluginManifestSnippets.h  ScreenPreviewWidget.cpp  ScreenPreviewWidget.h  StatusBadge.cpp  StatusBadge.h
src/viewmodels/: CMakeLists.txt
src/viewmodels/base/: ViewModelBase.cpp  ViewModelBase.h
src/viewmodels/cmdtlm/: CmdTlmParser.cpp  CmdTlmParser.h  CmdTlmViewModel.cpp  CmdTlmViewModel.h
src/viewmodels/dashboard/: DashboardViewModel.cpp  DashboardViewModel.h
src/viewmodels/docker/: DockerViewModel.cpp  DockerViewModel.h
src/viewmodels/doctor/: DoctorViewModel.cpp  DoctorViewModel.h
src/viewmodels/infra/: InfraViewModel.cpp  InfraViewModel.h
src/viewmodels/logviewer/: LogViewerViewModel.cpp  LogViewerViewModel.h
src/viewmodels/packettools/: PacketSimulator.cpp  PacketSimulator.h  PacketToolsViewModel.cpp  PacketToolsViewModel.h
src/viewmodels/plugin/: PluginManifestParser.cpp  PluginManifestParser.h  PluginTemplateEngine.cpp  PluginTemplateEngine.h  PluginViewModel.cpp  PluginViewModel.h
src/viewmodels/screen/: ScreenLayoutParser.cpp  ScreenLayoutParser.h
src/viewmodels/settings/: SettingsViewModel.cpp  SettingsViewModel.h
src/viewmodels/validation/: CmdTlmRuleSupport.cpp  CmdTlmRuleSupport.h  CommandValidator.cpp  CommandValidator.h  ConfigValidator.cpp  ConfigValidator.h  Diagnostic.cpp  Diagnostic.h  IRuleValidator.h  InterfaceValidator.cpp  InterfaceValidator.h  PluginConfigParser.cpp  PluginConfigParser.h  PluginKeywords.cpp  PluginKeywords.h  PluginValidator.cpp  PluginValidator.h  ProtocolRuleSupport.cpp  ProtocolRuleSupport.h  ProtocolValidator.cpp  ProtocolValidator.h  RuleValidatorRegistry.cpp  RuleValidatorRegistry.h  ScreenParser.cpp  ScreenParser.h  ScreenValidator.cpp  ScreenValidator.h  TargetConfigParser.cpp  TargetConfigParser.h  TargetConfigValidator.cpp  TargetConfigValidator.h  TelemetryValidator.cpp  TelemetryValidator.h  TextTokenizer.cpp  TextTokenizer.h
src/viewmodels/validator/: ValidatorViewModel.cpp  ValidatorViewModel.h
tests/: CMakeLists.txt
tests/mocks/: MockCommandExecutor.h
tests/unit/app/: ServiceRegistryTest.cpp  StartupPolicyTest.cpp
tests/unit/core/: EventBusTest.cpp  ExecutorProxyTest.cpp  ExecutorResultTest.cpp  ShellQuoteTest.cpp
tests/unit/services/: ConnectionServiceTest.cpp  DockerServiceTest.cpp  DoctorServiceTest.cpp  PluginServiceTest.cpp  SettingsServiceTest.cpp  SystemServiceTest.cpp
tests/unit/viewmodels/: CmdTlmParserTest.cpp  CommandValidatorTest.cpp  ConfigValidatorTest.cpp  DiagnosticTest.cpp  InterfaceValidatorTest.cpp  PacketSimulatorTest.cpp  PluginConfigParserTest.cpp  PluginManifestParserTest.cpp  PluginTemplateEngineTest.cpp  ProtocolValidatorTest.cpp  RuleValidatorRegistryTest.cpp  ScreenLayoutParserTest.cpp  ScreenParserTest.cpp  TargetConfigValidatorTest.cpp  TelemetryValidatorTest.cpp  TextTokenizerTest.cpp  ValidationParserTest.cpp  ValidatorViewModelTest.cpp
tests/unit/widgets/: CmdTlmHighlighterTest.cpp
translations/: CMakeLists.txt  openc3_ko.ts
